[tool.poetry]
name = "file-memoizer"
description = "Store function results across executions using cache files"
version = "0.0.0"
license = "MIT-0"
authors = ["Judson Neer <judson.neer@gmail.com>"]
repository = "https://github.com/lordjabez/file-memoizer"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1 <3.12"
cachier = "^2.1.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
flake8 = "^6.0.0"
pylint = "^2.17.4"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
safety = "^2.3.5"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
