[tool.poetry]
name = "file-memoizer"
description = "Store function results across executions using cache files"
version = "0.0.0"
license = "MIT-0"
authors = ["Judson Neer <judson.neer@gmail.com>"]
repository = "https://github.com/lordjabez/file-memoizer"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1 <3.12"
cachier = ">=2.1.1,<4.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.10"
flake8 = "^7.1.2"
pylint = "^3.2.7"
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
safety = "^3.5.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
